--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,14 +1,12 @@
-
+<!-- partials/footer.html -->
 <footer class="site-footer text-white">
   <div class="container py-4 py-lg-5">
     <div class="row g-4 align-items-start">
-      <!-- Brand / Copyright -->
       <div class="col-12 col-lg-4 text-center text-lg-start">
         <div class="footer-brand fw-semibold mb-1">Zafaryab Haider</div>
         <div class="footer-muted small">&copy; 2025 Zafaryab. All rights reserved.</div>
       </div>
 
-      <!-- Contact -->
       <div class="col-12 col-lg-5">
         <ul class="footer-list">
           <li>
@@ -21,12 +19,11 @@
           </li>
           <li>
             <i class="fa-solid fa-location-dot me-2"></i>
-            <span>Oslo, Paine, Aus</span>
+            <span>Orono, ME, USA</span>
           </li>
         </ul>
       </div>
 
-      <!-- Social -->
       <div class="col-12 col-lg-3 text-center text-lg-end">
         <div class="footer-muted small mb-2">Connect</div>
         <div class="footer-social d-inline-flex gap-2">
@@ -47,9 +44,7 @@
 
     <div class="d-flex flex-column flex-md-row gap-2 justify-content-between align-items-center footer-muted small">
       <span>Built with Bootstrap</span>
-      <a class="footer-top" href="#" aria-label="Back to top">
-        Back to top <i class="fa-solid fa-arrow-up ms-1"></i>
-      </a>
+      <a class="footer-top" href="#">Back to top <i class="fa-solid fa-arrow-up ms-1"></i></a>
     </div>
   </div>
 </footer>
